Removing Include() referencing OpenETDataType. Updating value getter logic for OpenET data grid's Month and Year cols.

--- a/Zybach.Web/src/app/shared/components/well-overview-tab/well-overview-tab.component.html
+++ b/Zybach.Web/src/app/shared/components/well-overview-tab/well-overview-tab.component.html
@@ -162,50 +162,50 @@
                     </div>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-12 col-sm-6">
+                            <div class="col-12">
                                 <div class="row">
-                                    <div class="col-12 col-sm-9 label"><strong>                                        
+                                    <div class="col-12 col-sm-7 label"><strong>                                        
                                         <field-definition [fieldDefinitionType]="'WellProgramParticipation'">
                                         </field-definition>:
                                     </strong> </div>
-                                    <div class="col-12 col-sm-3">{{well.WellParticipationName}}</div>
-                                    <div class="col-12 col-sm-9 label"><strong>Well Use: </strong></div>
-                                    <div class="col-12 col-sm-3">{{well.WellUseName}}</div>
-                                    <div class="col-12 col-sm-9 label"><strong>                                        
+                                    <div class="col-12 col-sm-5">{{well.WellParticipationName}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>Well Use: </strong></div>
+                                    <div class="col-12 col-sm-5">{{well.WellUseName}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>                                        
                                         <field-definition [fieldDefinitionType]="'WellChemigationInspectionParticipation'">
                                         </field-definition>
                                     </strong></div>
-                                    <div class="col-12 col-sm-3">{{well.RequiresChemigation ? "Yes" : "No"}}</div>
-                                    <div class="col-12 col-sm-9 label"><strong>
+                                    <div class="col-12 col-sm-5">{{well.RequiresChemigation ? "Yes" : "No"}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>
                                         <field-definition [fieldDefinitionType]="'WellWaterLevelInspectionParticipation'">
                                         </field-definition>
                                     </strong></div>
-                                    <div class="col-12 col-sm-3">{{well.RequiresWaterLevelInspection ? "Yes" : "No"}}</div>
-                                    <div class="col-12 col-sm-9 label"><strong>                                        
+                                    <div class="col-12 col-sm-5">{{well.RequiresWaterLevelInspection ? "Yes" : "No"}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>                                        
                                         <field-definition [fieldDefinitionType]="'WellWaterQualityInspectionParticipation'">
                                         </field-definition>
                                     </strong></div>
-                                    <div class="col-12 col-sm-3">{{well.WaterQualityInspectionTypes}}</div>
+                                    <div class="col-12 col-sm-5">{{well.WaterQualityInspectionTypes}}</div>
                                 </div>  
                             </div>
-                            <div class="col-12 col-sm-6">
+                            <div class="col-12">
                                 <div class="row">
-                                    <div class="col-12 col-sm-8 label"><strong>Clearinghouse ID: </strong></div>
-                                    <div class="col-12 col-sm-4">{{well.Clearinghouse}}</div>
-                                    <div class="col-12 col-sm-8 label"><strong>Site Name: </strong></div>
-                                    <div class="col-12 col-sm-4">{{well.SiteName}}</div>
-                                    <div class="col-12 col-sm-8 label"><strong>Site Number: </strong></div>
-                                    <div class="col-12 col-sm-4">{{well.SiteNumber}}</div>
-                                    <div class="col-12 col-sm-8 label"><strong>Replacement Well? </strong></div>
-                                    <div class="col-12 col-sm-4">{{well.IsReplacement ? "Yes" : "No"}}</div>
-                                    <div class="col-12 col-sm-8 label"><strong>Well Depth: </strong></div>
-                                    <div class="col-12 col-sm-4">{{well.WellDepth}}</div>
-                                    <div class="col-12 col-sm-8 label"><strong>Screen Interval: </strong></div>
-                                    <div class="col-12 col-sm-4">{{well.ScreenInterval}}</div>
-                                    <div class="col-12 col-sm-8 label"><strong>Screen Depth: </strong></div>
-                                    <div class="col-12 col-sm-4">{{well.ScreenDepth}}</div>
-                                    <div class="col-12 col-sm-8 label"><strong>Page #: </strong></div>
-                                    <div class="col-12 col-sm-4">{{well.PageNumber}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>Clearinghouse ID: </strong></div>
+                                    <div class="col-12 col-sm-5">{{well.Clearinghouse}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>Site Name: </strong></div>
+                                    <div class="col-12 col-sm-5">{{well.SiteName}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>Site Number: </strong></div>
+                                    <div class="col-12 col-sm-5">{{well.SiteNumber}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>Replacement Well? </strong></div>
+                                    <div class="col-12 col-sm-5">{{well.IsReplacement ? "Yes" : "No"}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>Well Depth: </strong></div>
+                                    <div class="col-12 col-sm-5">{{well.WellDepth}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>Screen Interval: </strong></div>
+                                    <div class="col-12 col-sm-5">{{well.ScreenInterval}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>Screen Depth: </strong></div>
+                                    <div class="col-12 col-sm-5">{{well.ScreenDepth}}</div>
+                                    <div class="col-12 col-sm-7 label"><strong>Page #: </strong></div>
+                                    <div class="col-12 col-sm-5">{{well.PageNumber}}</div>
                                 </div>
                             </div>
                         </div>
