Copying context menu component from Qanat; updating to use bootstrap. Adjusting OpenET Integration list page to use a grid; copying Qanat pattern, including the dropdown Actions context menu.

--- a/Zybach.Web/src/scss/_grids.scss
+++ b/Zybach.Web/src/scss/_grids.scss
@@ -24,4 +24,8 @@ $grid-header-background: #0076C0;
   .ag-header-cell-menu-button {
     opacity: 1 !important;
   }
+
+  .ag-cell-value.context-menu-container {
+    overflow: visible;
+  } 
 }
