--- a/Zybach.Web/src/app/pages/openet-sync-water-year-month-status-list/openet-sync-water-year-month-status-list.component.html
+++ b/Zybach.Web/src/app/pages/openet-sync-water-year-month-status-list/openet-sync-water-year-month-status-list.component.html
@@ -11,18 +11,7 @@
 <div class="container mt-sm-4">
     <ng-container *ngIf="!loadingPage; else loadingBlock">
         <app-alert-display></app-alert-display>
-        <ngb-alert *ngIf="syncsInProgress > 0" type="info" [dismissible]="false">
-                Sync operations are currently in progress to update the following {{ syncsInProgress == 1 ? "date" : "dates" }}: {{ getInProgressDates()}}.
-                <br />
-                Syncing and finalizing any of the dates involved in these operations will be disabled until the respective operation completes.
-        </ngb-alert>
-        <ngb-alert *ngIf="!openETSyncEnabled()" [type]="'info'" [dismissible]="false">
-            Currently, syncing with OpenET is not enabled. This feature will be enabled in the future.
-        </ngb-alert>
-        <ngb-alert *ngIf="!isOpenETAPIKeyValid && openETSyncEnabled()" [type]="'info'" [dismissible]="false">
-            There was an error communicating with the OpenET platform, and syncing cannot be performed. Support has been
-            informed and will address the issue as soon as possible.
-        </ngb-alert>
+        
         <div class="row mb-2">
             <div class="col">
                 <h2 class="d-inline-block">OpenET Integration</h2>
@@ -32,6 +21,13 @@
                 </div>
             </div>
         </div>
+
+        <ngb-alert *ngIf="!openETSyncEnabled()" type="warning" [dismissible]="false">
+            <span>
+                OpenET Syncs are not currently enabled. If you would like to begin syncing OpenET data, contact a site administrator to update the platform configuration.
+            </span>
+        </ngb-alert>
+
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
@@ -39,43 +35,18 @@
                         OpenET Sync Status By Month
                     </div>
                     <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-striped table-condensed" style="table-layout:fixed">
-                                <thead>
-                                    <tr>
-                                        <th style="width: 10%">Actions</th>
-                                        <th style="width: 7%">Year</th>
-                                        <th style="width: 6%">Month</th>
-                                        <th style="width: 10%">OpenET Variable</th>
-                                        <th style="width: 10%">Last Updated</th>
-                                        <th style="width: 10%">Finalized Date</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr *ngFor="let openETSync of openETSyncs">
-                                        <td class="align-middle">
-                                            <button class="btn btn-zybach mr-3"
-                                                (click)="setSelectedOpenETSyncAndLaunchModal(syncOpenETSyncModalContent, openETSync)"
-                                                [disabled]="!openETSyncEnabled() || !isCurrentUserAdministrator() || (openETSync.FinalizeDate !== null && openETSync.FinalizeDate !== undefined) || syncInProgressForOpenETSync(openETSync.OpenETSyncID)">
-                                                Sync</button>
-                                            <button class="btn btn-zybach"
-                                                (click)="setSelectedOpenETSyncAndLaunchModal(finalizeOpenETSyncModalContent, openETSync)"
-                                                [disabled]="!isCurrentUserAdministrator() || (openETSync.FinalizeDate !== null && openETSync.FinalizeDate !== undefined) || syncInProgressForOpenETSync(openETSync.OpenETSyncID)">Finalize</button>
-                                        </td>
-                                        <td class="align-middle">{{openETSync.Year}}</td>
-                                        <td class="align-middle">{{openETSync.Month}}</td>
-                                        <td class="align-middle">{{openETSync.OpenETDataType.OpenETDataTypeName}}</td>
-                                        <td class="align-middle">{{openETSync.LastUpdateDate}}</td>
-                                        <td class="align-middle">{{openETSync.FinalizeDate | date:dateFormatString}}</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="updating" *ngIf="isPerformingAction">
-                            <div class="updating-text">
-                                <span class="fa fa-spinner loading-spinner"></span>
+                        <div class="row mb-2">
+                            <div class="col-auto ml-auto">
+                                <fresca-clear-grid-filters-button [grid]="openETGrid" classList="mr-2"></fresca-clear-grid-filters-button>
+                                <button class="btn btn-secondary btn-md" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+                                    ngbTooltip="Download as CSV"><i class="fas fa-download"></i>
+                                </button>
                             </div>
                         </div>
+                        <ag-grid-angular #openETGrid style="width: 100%; height: 800px" class="ag-theme-balham" [rowData]="openETSyncs" 
+                            [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [pagination]="true" [paginationPageSize]="100" 
+                            [suppressMenuHide]="true">
+                        </ag-grid-angular>
                     </div>
                 </div>
             </div>
@@ -84,48 +55,7 @@
 </div>
 
 <ng-template #loadingBlock>
-    <i class="fa fa-spinner loading-spinner"></i> Loading
-</ng-template>
-
-<ng-template #finalizeOpenETSyncModalContent let-modal>
-    <div class="modal-header">
-        <h5 class="modal-title" id="finalizeOpenETSyncModalTitle">Finalize Water Year and Month Data</h5>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="modal-body">
-        <p>
-            Are you sure you want to finalize the OpenET data for {{selectedOpenETSyncName}} {{selectedOpenETSync.Year}}? The system will no longer
-            update Evapotranspiration data for {{selectedOpenETSyncName}} {{selectedOpenETSync.Year}} and will not accept any new override
-            submissions.
-        </p>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-zybach btn-md" ngbAutoFocus (click)="finalizeOpenETSync()">
-                Finalize</button>
-            <button type="button" class="btn btn-secondary btn-md"
-                (click)="resetOpenETSyncToFinalizeAndCloseModal(modal)">Cancel</button>
-        </div>
-    </div>
-</ng-template>
-
-<ng-template #syncOpenETSyncModalContent let-modal>
-    <div class="modal-header">
-        <h5 class="modal-title" id="syncOpenETSyncModalTitle">Sync Water Year and Month Data</h5>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="modal-body">
-        <p>
-            Are you sure you want to sync the OpenET data for {{selectedOpenETSyncName}} {{selectedOpenETSync.Year}}? This will refresh OpenET Data
-            for all applicable parcels, but will not reset any user-input overrides.
-        </p>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-zybach btn-md" ngbAutoFocus (click)="syncOpenETSync()">
-                Sync</button>
-            <button type="button" class="btn btn-secondary btn-md"
-                (click)="resetOpenETSyncToFinalizeAndCloseModal(modal)">Cancel</button>
-        </div>
+    <div class="text-center">
+        <i class="fa fa-spinner loading-spinner"></i> Loading
     </div>
 </ng-template>
