--- a/Zybach.Web/src/app/pages/user-detail/user-detail.component.html
+++ b/Zybach.Web/src/app/pages/user-detail/user-detail.component.html
@@ -18,7 +18,7 @@
     </h2>
     <app-alert-display></app-alert-display>
     <div class="row mt-4">
-        <div class="col-sm-6">
+        <div class="col-sm-8">
             <div class="card">
                 <div class="card-header">
                     <a *ngIf="currentUserIsAdmin()" class="btn btn-zybach btn-sm float-right"
@@ -71,11 +71,19 @@
                             <em *ngIf="!user?.Role?.RoleDisplayName" class="text-muted">Not Available</em>
                         </dd>
 
-                        <dt class="text-sm-right col-sm-5 col-xs-12" *ngIf="user.Role.RoleID === 1">Receives System Communications</dt>
-                        <dd class="col-sm-7 col-xs-12" *ngIf="user.Role.RoleID === 1">
-                            {{user?.ReceiveSupportEmails == true ? "Yes" : "No"}}
-                            <em *ngIf="!user" class="text-muted">Not Available</em>
-                        </dd>
+                        <ng-container *ngIf="userIsAdministrator()">
+                            <dt class="text-sm-right col-sm-5 col-xs-12">Receives System Communications?</dt>
+                            <dd class="col-sm-7 col-xs-12" *ngIf="user.Role.RoleID === 1">
+                                {{ booleanValueGetter(user?.ReceiveSupportEmails) }}
+                                <em *ngIf="!user" class="text-muted">Not Available</em>
+                            </dd>
+
+                            <dt class="text-sm-right col-sm-5 col-xs-12">Performs Chemigation Inspections?</dt>
+                            <dd class="col-sm-7 col-xs-12" *ngIf="user.Role.RoleID === 1">
+                                {{ booleanValueGetter(user?.PerformsChemigationInspections) }}
+                                <em *ngIf="!user" class="text-muted">Not Available</em>
+                            </dd>
+                        </ng-container>
                     </dl>
                 </div>
             </div>
