--- a/Zybach.Web/src/app/pages/user-edit/user-edit.component.html
+++ b/Zybach.Web/src/app/pages/user-edit/user-edit.component.html
@@ -23,25 +23,39 @@
           <label class="required">Role</label>
         </div>
         <div class="col-sm-10">
-          <select name="RoleID" class="form-control" [(ngModel)]="model.RoleID" (change)="checkReceiveSupportEmails()" required>
-            <option value=""></option>
-            <option *ngFor="let role of roles" [value]="role.RoleID">
-              {{role.RoleDisplayName}}
-            </option>
-          </select>
+          <ng-select name="role" [(ngModel)]="model.RoleID" (ngOnChanges)="checkReceiveSupportEmails()"
+            [items]="roles" bindLabel="RoleDisplayName" bindValue="RoleID" 
+            placeholder="Choose a Role" >
+          </ng-select>
         </div>
       </div>
-      <div class="form-group mt-4" *ngIf="model.RoleID.toString() === '1'">
-        <div class="col-sm-5 control-label">
-          <label class="required">Should Receive System Communications?</label>
+
+      <ng-container *ngIf="selectedRoleIsAdmin()">
+        <div class="form-group mt-4">
+          <div class="col-sm-5 control-label">
+            <label class="required">Should Receive System Communications?</label>
+          </div>
+          <div class="col-sm-10">
+            <label class="ml-2"><input type="radio" name="ReceiveSupportEmails"
+              [(ngModel)]="model.ReceiveSupportEmails" [value]="true"> Yes</label>
+            <label class="ml-2"><input type="radio" name="ReceiveSupportEmails"
+              [(ngModel)]="model.ReceiveSupportEmails" [value]="false"> No</label>
+          </div>
         </div>
-        <div class="col-sm-10">
-          <label class="ml-2"><input type="radio" name="ReceiveSupportEmails"
-            [(ngModel)]="model.ReceiveSupportEmails" [value]="true"> Yes</label>
-          <label class="ml-2"><input type="radio" name="ReceiveSupportEmails"
-            [(ngModel)]="model.ReceiveSupportEmails" [value]="false"> No</label>
+
+        <div class="form-group mt-4">
+          <div class="col-sm-5 control-label">
+            <label class="required">Performs Chemigation Inspections?</label>
+          </div>
+          <div class="col-sm-10">
+            <label class="ml-2"><input type="radio" name="PerformsChemigationInspections"
+              [(ngModel)]="model.PerformsChemigationInspections" [value]="true"> Yes</label>
+            <label class="ml-2"><input type="radio" name="PerformsChemigationInspections"
+              [(ngModel)]="model.PerformsChemigationInspections" [value]="false"> No</label>
+          </div>
         </div>
-      </div>
+      </ng-container>
+
       <div class="row">
         <div class="col-sm">
           <i class="fas fa-bolt"></i> Required field
