--- a/Zybach.Web/src/app/pages/user-list/user-list.component.html
+++ b/Zybach.Web/src/app/pages/user-list/user-list.component.html
@@ -3,44 +3,46 @@
       <li class="breadcrumb-item active" aria-current="page">Users</li>
   </ol>
 </nav>
+
 <div class="container">
-    <app-alert-display></app-alert-display>
+  <app-alert-display></app-alert-display>
+
+  <div *ngIf="users && unassignedUsers.length" class="mb-4">
     <h2 class="d-inline-block">Unassigned Users</h2>
     <p class="lead" *ngIf="users && unassignedUsers.length">
       This is a list of all users who are awaiting account configuration. Assign the user a role and billing account(s). If the account was created in error, set their Role to “Disabled” to remove them from this list.
     </p>
-    <p class="lead" *ngIf="users && !unassignedUsers.length">
-      Congratulations! All users have been assigned a role.
-    </p>
-</div>
-<div class="container mt-sm-4" *ngIf="users && unassignedUsers.length">
-  <div class="table-responsive">
-    <ag-grid-angular #unassignedUsersGrid style="width: 100%; height: 300px;" class="ag-theme-balham" [rowData]="unassignedUsers"
-      [columnDefs]="columnDefs" [pagination]="true" [paginationPageSize]="100">
-    </ag-grid-angular>
+
+    <div class="row mb-2">
+      <div class="col-auto ml-auto">
+        <fresca-clear-grid-filters-button class="float-right" [grid]="unassignedUsersGrid"></fresca-clear-grid-filters-button>
+      </div>
+    </div>
+    <div class="table-responsive">
+      <ag-grid-angular #unassignedUsersGrid style="width: 100%; height: 300px;" class="ag-theme-balham" [rowData]="unassignedUsers"
+        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [pagination]="true" [paginationPageSize]="100" (gridReady)="onGridReady($event)">
+      </ag-grid-angular>
+    </div>
   </div>
-</div>
-<div class="container">
-  
-</div>
-<div class="container mt-2">
-  <h2 class="d-inline-block">All Users</h2>
+
+  <h2 class="d-inline-block\">Users</h2>
   <p class="lead">
     A list of users is shown in the grid below.
   </p>
-  <div class="row my-2">
-    <div class="col">
-      <a class="btn btn-zybach btn-md mr-3 float-right" routerLink="/invite-user">Invite User</a>
-      <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
-      ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-      <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="usersGrid">
-      </fresca-clear-grid-filters-button>
+
+  <div class="row mb-2">
+    <div class="col-auto ml-auto">
+      <fresca-clear-grid-filters-button class="mr-2" [grid]="usersGrid"></fresca-clear-grid-filters-button>
+      <button class="btn btn-secondary btn-md mr-2" style="cursor: pointer;" (click)="exportToCsv()" placement="top"
+        ngbTooltip="Download as CSV"><i class="fas fa-download"></i>
+      </button>
+      <a class="btn btn-zybach btn-md" routerLink="/invite-user">Invite User</a>
     </div>
   </div>
 
   <div class="table-responsive">
-    <ag-grid-angular #usersGrid style="width: 100%; height: 800px;" class="ag-theme-balham" [rowData]="rowData"
-      [columnDefs]="columnDefs" [pagination]="true" [paginationPageSize]="100">
+    <ag-grid-angular #usersGrid style="width: 100%; height: 800px;" class="ag-theme-balham" [rowData]="users"
+      [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [pagination]="true" [paginationPageSize]="100" (gridReady)="onGridReady($event)">
     </ag-grid-angular>
   </div>
 </div>
