Updating Last Measurement Date filter logic on sensor status map; binning <=24 hours, >24 hours, No Data, and <= 24 hours with active support ticket. Adding active support ticket link to map popup.

--- a/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
+++ b/Zybach.Web/src/app/pages/sensor-status-map-popup/sensor-status-map-popup.component.html
@@ -12,7 +12,14 @@
     <span *ngIf="sensor.LastMessageAgeInHours != null; else notAvailable">{{ sensor.LastMessageAgeInHours }} hours</span><br />
     
     <label class="rowHeader">Last Voltage Reading:</label> 
-    <span *ngIf="sensor.LastVoltageReading != null; else notAvailable">{{ sensor.LastVoltageReading | number:"1.0-0" }} mV</span>
+    <span *ngIf="sensor.LastVoltageReading != null; else notAvailable">{{ sensor.LastVoltageReading | number:"1.0-0" }} mV</span><br />
+    
+    <ng-container *ngIf="sensor.MostRecentSupportTicketID && sensor.MostRecentSupportTicketTitle">
+        <label class="rowHeader">Active Support Ticket:</label> 
+        <span *ngIf="sensor.LastVoltageReading != null; else notAvailable">
+            <a routerLink="/support-tickets/{{sensor.MostRecentSupportTicketID}}">{{ sensor.MostRecentSupportTicketTitle }}</a>
+        </span>
+    </ng-container>
 </div>
 
 <ng-template #notAvailable>N/A</ng-template>
