--- a/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
+++ b/Zybach.Web/src/app/pages/sensor-status/sensor-status.component.html
@@ -14,17 +14,14 @@
     <zybach-sensor-status-map #wellMap [wellsGeoJson]="wellsGeoJson" (onWellSelected)="onMapSelection($event)"></zybach-sensor-status-map>
 </div>
 <div class="container navCaretMargin">
-    <div class="row mt-2">
-        <div class="col">
-            <p>
-                The following grid shows all sensors that have not sent a message in 8 or more hours, with a most recent voltage reading of less than 2500 millivolts, or Continuity Devices that are Always On/Off.
-            </p>
-        </div>
-        <div class="col-auto">
-            <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="downloadCsv()" placement="top" ngbTooltip="Download as CSV">
+    <custom-rich-text [customRichTextTypeID]="richTextTypeID"></custom-rich-text>
+
+    <div class="row">
+        <div class="col-auto ml-auto">
+            <fresca-clear-grid-filters-button class="ml-3" [grid]="wellsGrid"></fresca-clear-grid-filters-button>
+            <button class="btn btn-secondary btn-md" style="cursor: pointer;" (click)="downloadCsv()" placement="top" ngbTooltip="Download as CSV">
                 <i class="fas fa-download"></i>
              </button>
-            <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="wellsGrid"></fresca-clear-grid-filters-button>
         </div>
     </div>
     <ag-grid-angular #wellsGrid style="width: 100%; height: 400px;" class="ag-theme-balham mt-2" headerHeight="70"
