Adding .npmrc file specifying "legacy-peer-deps=true" in order to ignore peer dependency issues between ng-bootstrap and our angular/core version for the time being. Fixing some breaking changes from upgrade to angular v15: @import "~..." apparently previously linked to the node-modules folder, and now throws an error. Upgrading babel/compat-data package version to remove references to deprecated plugins.

--- a/Zybach.Web/src/app/app.component.scss
+++ b/Zybach.Web/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import "~src/scss/_variables.scss";
+@import "../scss/variables";
 
 .waterYearToDisplay{
     width: 80% !important; padding:3px !important;
