--- a/Zybach.Web/src/scss/_grids.scss
+++ b/Zybach.Web/src/scss/_grids.scss
@@ -1,5 +1,5 @@
-@import "~ag-grid-community/src/styles/ag-grid.scss";
-@import "~ag-grid-community/src/styles/ag-theme-balham/sass/ag-theme-balham-mixin";
+@import "node_modules/ag-grid-community/src/styles/ag-grid.scss";
+@import "node_modules/ag-grid-community/src/styles/ag-theme-balham/sass/ag-theme-balham-mixin";
 
 $grid-header-background: #0076C0;
 
