--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.scss
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.scss
@@ -1,4 +1,5 @@
-@import "~src/scss/_variables.scss";
+@import "../../../../scss/variables";
+
   .objectType {
     font-size:0.8em;
     color:gray;
