--- a/Zybach.Web/src/styles.scss
+++ b/Zybach.Web/src/styles.scss
@@ -1,19 +1,18 @@
 @import "scss/_variables.scss";
 
 // import Bootstrap AFTER variables
-@import "~bootstrap/scss/bootstrap";
-@import "~font-awesome/css/font-awesome.css";
+@import "/node_modules/bootstrap/scss/bootstrap";
+@import "/node_modules/font-awesome/css/font-awesome.css";
 
 @import "scss/_grids.scss";
-@import "~leaflet/dist/leaflet.css";
-//@import "~leaflet-draw/dist/leaflet.draw.css";
+@import "/node_modules/leaflet/dist/leaflet.css";
 
 @import "scss/_sticky_footer.scss";
 @import "scss/_forms.scss";
 @import "scss/_custom-bootstrap.scss";
 
-@import "~ngx-toastr/toastr";
-@import "~@ng-select/ng-select/themes/default.theme.css";
+@import "/node_modules/ngx-toastr/toastr";
+@import "/node_modules/@ng-select/ng-select/themes/default.theme.css";
 
 //ckeditor css
 
