adding vegarenderservice to helm charts; removing PlatformLongName etc from config fixing config values

--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -2,7 +2,7 @@
     class="navbar navbar-expand-xl justify-content-start navbar-zybach logoPadding navbar-dark navbar-responsive-header">
 
     <a routerLink="/" routerLinkActive="active" class="navbar-brand nav-link">
-        {{platformShortName()}}
+        Groundwater Managers Platform
     </a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbar2"
         (click)="toggleCurrentPageHeader()">
