--- a/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
+++ b/Zybach.Web/src/app/pages/home/home-index/home-index.component.html
@@ -23,7 +23,7 @@
     </ngb-alert>
 
     <app-alert-display></app-alert-display>
-    <h1 class="text-primary mb-4">{{platformLongName()}}</h1>
+    <h1 class="text-primary mb-4">Twin Platte Groundwater Managers Platform</h1>
     <div class="row mt-sm-4">
         <div class="col-md-4 order-md-12 order-1 col-sm-12">
             <div class="card">
