--- a/Zybach.Web/src/app/shared/components/water-year-select/water-year-select.component.html
+++ b/Zybach.Web/src/app/shared/components/water-year-select/water-year-select.component.html
@@ -1,6 +1,6 @@
 <div class="form-group form-inline mt-0 mb-0">
   {{selectYearLabel}}  
-  <a href="#" class="nav-link water-year-dropdown dropdown-toggle font-weight-bold" role="button" data-toggle="dropdown">
+  <a href="#" class="nav-link water-year-dropdown dropdown-toggle font-weight-bold" role="button" data-bs-toggle="dropdown">
     {{selectedYear || "All Years"}}
   </a>
   <div class="dropdown-menu">
