--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -4,7 +4,7 @@
     <a routerLink="/" routerLinkActive="active" class="navbar-brand nav-link">
         Groundwater Managers Platform
     </a>
-    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbar2"
+    <button class="navbar-toggler ml-auto" type="button" data-bs-toggle="collapse" data-target="#navbar2"
         (click)="toggleCurrentPageHeader()">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -24,7 +24,7 @@
                 <a href="javascript:void(0);" (click)="login()" routerLinkActive="active" class="nav-link">Sign In</a>
             </li>
             <li class="nav-item dropdown welcomeUser" routerLinkActive="active" *ngIf="isAuthenticated()">
-                <a href="#" class="nav-link dropdown-toggle pr-3" role="button" data-toggle="dropdown"
+                <a href="#" class="nav-link dropdown-toggle pr-3" role="button" data-bs-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     Welcome {{getUserName()}}
                 </a>
@@ -39,7 +39,7 @@
                 <a routerLink="/" class="nav-link">Home</a>
             </li>
             <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAdministrator()">
-                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
+                <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     Manage
                 </a>
@@ -60,7 +60,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown" routerLinkActive="active">
-                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
+                <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     Learn More
                 </a>
@@ -78,7 +78,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown" routerLinkActive="active" *ngIf="isAuthenticated() && !isReadOnly() && !isUnassignedOrDisabled()">
-                <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
+                <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     Report
                 </a>
@@ -121,7 +121,7 @@
             <ng-container *ngIf="isAuthenticated()">
                 <li class="nav-item dropdown dashboardItem" routerLinkActive="active" [ngClass]="{'currentPage': isDataProgramCurrentPage()}"
                     *ngIf="!isUnassigned()">
-                    <a href="#" class="dropdown-toggle nav-link" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    <a href="#" class="dropdown-toggle nav-link" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <img src="/assets/main/nav/dashboard.png" />
                         Water Data Program
@@ -156,7 +156,7 @@
                     </div>
                 </li>
                 <li class="nav-item dropdown mapItem" routerLinkActive="active" [ngClass]="{'currentPage': isMapCurrentPage()}" *ngIf="!isUnassigned()">
-                    <a href="#" class="dropdown-toggle nav-link" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="#" class="dropdown-toggle nav-link" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <img src="/assets/main/nav/map.png" />
                         Well Inventory
                     </a>
@@ -171,7 +171,7 @@
                 </li>
                 <li class="nav-item dropdown chemigationItem" routerLinkActive="active" [ngClass]="{'currentPage': isChemigationCurrentPage()}"
                     *ngIf="!isReadOnly() && !isUnassigned()">
-                    <a href="#" class="dropdown-toggle nav-link" role="button" data-toggle="dropdown" aria-haspopup="true"
+                    <a href="#" class="dropdown-toggle nav-link" role="button" data-bs-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
                         <img src="/assets/main/nav/chemigation.png" />
                         Permits and Inspections
